Fix showing warnings on shift import

--- a/src/app/main/content/schedule/shifts-import/shifts-import.component.scss
+++ b/src/app/main/content/schedule/shifts-import/shifts-import.component.scss
@@ -15,4 +15,14 @@
         display: none !important;
     }
 
+    fieldset {
+        border: 1px solid #dcdcdc;
+        border-radius: 2px;
+        margin-bottom: 16px;
+
+        legend {
+            padding: 0 4px;
+        }
+    }
+
 }
